# realWRS2020

./: Dockerfile  README.md  commandline.txt  install-darknet.sh  install-opencv.sh  install.sh
common/: .gitignore
common/scripts/: command.py  tf_locations.py
common/src/common/: grammar.py  hokuto.py  hokuto_cleanup.py  (+21 more)
depth_lib/: .gitignore  CMakeLists.txt  package.xml  setup.py
depth_lib/launch/: hsrb_head_rgbd_sensor.launch  hsrb_head_rgbd_sensor_hsrb.launch
depth_lib/msg/: Object.msg  Plane.msg
depth_lib/scripts/: .#depth_no_subscription.py  depth.py  depth_no_subscription.py  turn_table_object.py  turn_table_object_xtion.py
depth_lib/srv/: GetDish.srv  GetDoorHandle.srv  GetObject.srv  GetPerpendicularPlanes.srv  GetTableTopObject.srv  GetTray.srv
navigation_pumas/src/navigation/path_planning/omni_navigation/: CMakeLists.txt  package.xml
navigation_pumas/src/navigation/path_planning/omni_navigation/src/: omni_navigation_node.cpp
navigation_pumas/src/navigation/path_planning/simple_move_test/: CMakeLists.txt  package.xml
navigation_pumas/src/navigation/path_planning/simple_move_test/src/: simple_move_node_test.cpp
navigation_pumas/src/navigation/path_planning/speed_mannager/: CMakeLists.txt  package.xml
navigation_pumas/src/navigation/path_planning/speed_mannager/src/: speed_mannager_node.cpp
vizbox_bypass/: CMakeLists.txt  package.xml  setup.py
vizbox_bypass/config/: task.yaml
vizbox_bypass/scripts/: smach_vizbox.py  smach_vizbox2.py  test.py  test_array.py
vizbox_bypass/srv/: EventStep.srv
wrs_challenge/launch/: dev_ycb.launch  erasersvision.launch  erasersvision_calib.launch  erasersvision_debug.launch  run.launch  tidyup.launch
wrs_challenge/scripts/: tidyup_main.py  utils.py
yolo_tf/: CMakeLists.txt  package.xml
yolo_tf/scripts/: log_i.txt  log_o.txt  nets.py  train_classifier.py  yolo9000_train_koike.py  yolo9000_train_nextichikawa.py
(+127 files in other folders)
